Bug 1676214: Added institution small logo upload
behatnotneeded

--- a/htdocs/theme/raw/sass/layout/_header.scss
+++ b/htdocs/theme/raw/sass/layout/_header.scss
@@ -6,6 +6,7 @@
 
     .logo-area,
     .logo,
+    .logoxs,
     .admin-title,
     .loading-box {
         float: left;
@@ -18,6 +19,27 @@
             height: 45px;
         }
     }
+
+    .logo.change-to-small {
+        img {
+            @media (max-width: 415px) {
+              display: none;
+            }
+        }
+    }
+
+    .logoxs {
+        padding: 6px 0;
+        margin-right: 15px;
+        img {
+            display: none;
+            @media (max-width: 415px) {
+              display: inherit;
+              height: 48px;
+            }
+        }
+    }
+
     .admin-title {
         @extend .sr-only;
         @media (min-width: $screen-sm-min) {
